# ez-mux

./: .gitignore  Cargo.toml  LICENSE  README.md  lefthook.yml  mise.toml
.github/: release-notes-template.md
.github/workflows/: ci-quality-gate.yml  release.yml
scripts/: audit_runtime_file_sizes.py
scripts/install/: run-linux-install-validation.sh  run-macos-install-validation.sh  run-platform-install-validation.sh
scripts/release/: assemble-release-bundle.sh  assemble_release_bundle.py
scripts/smoke/: run-linux-smoke.sh  run-macos-amendment-verification.sh  run-macos-smoke.sh  run-platform-smoke.sh
src/: app.rs  cli.rs  config.rs  exit_code.rs  lib.rs  main.rs  tests.rs
src/app/: tests.rs
src/config/: load.rs  tests.rs
src/logging/: error.rs  launch.rs  mod.rs  open.rs  pathing.rs  tests.rs
src/session/: auxiliary_viewer.rs  error.rs  focus.rs  mod.rs  mode.rs  mode_adapter.rs  mode_runtime.rs  operator_identity.rs  popup_shell.rs  preset.rs  remote_remap.rs  repair.rs  resolver.rs  runtime.rs  slot_registry.rs  swap.rs  teardown.rs  topology.rs
tests/: core_session_e2e.rs  focus5_amendment_t1_1_red.rs  focus5_amendment_t1_2_runtime_recovery.rs  focus5_amendment_t1_3_style_parity.rs  focus5_amendment_t1_4_keybind_parity.rs  focus5_amendment_t1_5_remote_defaults.rs  focus_reduced_layout_anchor.rs  foundation_e2e.rs  session_runtime_integration.rs  smoke_e2e.rs  zoomed_mode_switch_e2e.rs
tests/core_session_e2e/: core_support.rs  scenario_e2e_01.rs  scenario_e2e_02.rs  scenario_e2e_03.rs  scenario_e2e_04.rs  scenario_e2e_05.rs  scenario_e2e_06.rs  (+10 more)
(+64 files in other folders)
