[package]
name = "ez-mux"
version = "0.2.6"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Deterministic tmux workspace orchestrator"
default-run = "ezm"

[[bin]]
name = "ezm"
path = "src/main.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.3.18"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros"] }
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0.145"
portable-pty = "0.8.1"
